--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -112,14 +112,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">残疾人姓名</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="text" name="name" lay-verify="required" autocomplete="off" placeholder="请输入姓名"
+				<input type="text" name="name" lay-verify="required" autocomplete="off" placeholder=""
 					   class="layui-input">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">身份证号</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="idNumber" lay-verify="required" placeholder="请输入身份证号" autocomplete="off"
+				<input type="number" name="idNumber" lay-verify="required" placeholder="" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
@@ -134,10 +134,14 @@
 			<label class="layui-form-label">残疾类别</label>
 			<div class="layui-input-block" style="padding-right:15px;">
 				<select name="typeOfDisabilityId">
-					<option value="1">一级</option>
-					<option value="2">二级</option>
-					<option value="3">三级</option>
-					<option value="4">四级</option>
+					<option value="1">视力残疾</option>
+					<option value="2">听力残疾</option>
+					<option value="3">言语残疾</option>
+					<option value="4">肢体残疾</option>
+					<option value="5">智力残疾</option>
+					<option value="6">精神残疾</option>
+					<option value="7">多重残疾</option>
+					<option value="8">其他</option>
 				</select>
 			</div>
 		</div>
@@ -155,14 +159,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">家庭住址</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="text" name="address" lay-verify="required" placeholder="请输入家庭住址" autocomplete="off"
+				<input type="text" name="address" lay-verify="required" placeholder="" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">联系电话</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="contactNumber" lay-verify="required" placeholder="请输入联系电话" min="0" step="1"
+				<input type="number" name="contactNumber" lay-verify="required" placeholder="" min="0" step="1"
 					   autocomplete="off"
 					   class="layui-input">
 			</div>
@@ -179,14 +183,14 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">托养月数</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="nursingMonth" lay-verify="required" placeholder="请输入托养月数" autocomplete="off"
+				<input type="number" name="nursingMonth" lay-verify="required" placeholder="" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">补贴金额</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="subsidies" lay-verify="required" placeholder="请输入补贴金额" autocomplete="off"
+				<input type="number" name="subsidies" lay-verify="required" placeholder="" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
