--- a/src/main/resources/static/webApp/manager/homeAnalyze.html
+++ b/src/main/resources/static/webApp/manager/homeAnalyze.html
@@ -80,158 +80,158 @@
 <div class="container">
 	<div class="title">残疾人之家分析</div>
 	<div class="main">
-		<div class="card">
-			<div class="sub_title">综合排名TOP3</div>
+		<div class="card" id="ranking">
+			<div class="sub_title">综合排名</div>
 			<div class="sub_main">
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_03.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人之家</p>
-						<p class="card_value">全年共计帮助1234人</p>
+						<p class="card_title name"></p>
+						<!--<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>-->
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_06.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">纳瑞艾莎之家</p>
-						<p class="card_value">全年共计帮助123人</p>
+						<p class="card_title name"></p>
+						<!--<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>-->
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_08.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人有爱</p>
-						<p class="card_value">全年共计帮助32人</p>
+						<p class="card_title name"></p>
+						<!--<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>-->
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="card">
-			<div class="sub_title">综合排名TOP3</div>
+		<div class="card" id="projectSum">
+			<div class="sub_title">服务项目总数排名</div>
 			<div class="sub_main">
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_03.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人之家</p>
-						<p class="card_value">全年共计帮助1234人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_06.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">纳瑞艾莎之家</p>
-						<p class="card_value">全年共计帮助123人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_08.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人有爱</p>
-						<p class="card_value">全年共计帮助32人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="card">
-			<div class="sub_title">综合排名TOP3</div>
+		<div class="card" id="personCountSum">
+			<div class="sub_title">总服务人数排名</div>
 			<div class="sub_main">
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_03.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人之家</p>
-						<p class="card_value">全年共计帮助1234人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_06.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">纳瑞艾莎之家</p>
-						<p class="card_value">全年共计帮助123人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_08.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人有爱</p>
-						<p class="card_value">全年共计帮助32人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="card">
-			<div class="sub_title">综合排名TOP3</div>
+		<div class="card" id="personTimeSum">
+			<div class="sub_title">总服务人次排名</div>
 			<div class="sub_main">
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_03.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人之家</p>
-						<p class="card_value">全年共计帮助1234人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_06.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">纳瑞艾莎之家</p>
-						<p class="card_value">全年共计帮助123人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_08.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人有爱</p>
-						<p class="card_value">全年共计帮助32人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="card">
-			<div class="sub_title">综合排名TOP3</div>
+		<div class="card" id="averageTime">
+			<div class="sub_title">总服务时长排名</div>
 			<div class="sub_main">
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_03.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人之家</p>
-						<p class="card_value">全年共计帮助1234人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_06.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">纳瑞艾莎之家</p>
-						<p class="card_value">全年共计帮助123人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_08.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人有爱</p>
-						<p class="card_value">全年共计帮助32人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="card">
-			<div class="sub_title">综合排名TOP3</div>
+		<div class="card" id="totalTimeSum">
+			<div class="sub_title">平均服务时长排名</div>
 			<div class="sub_main">
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_03.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人之家</p>
-						<p class="card_value">全年共计帮助1234人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_06.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">纳瑞艾莎之家</p>
-						<p class="card_value">全年共计帮助123人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 				<div class="card_main">
 					<div class="card_icon"><img src="../../images/disabled/icon_08.png" alt=""></div>
 					<div class="card_text">
-						<p class="card_title">残疾人有爱</p>
-						<p class="card_value">全年共计帮助32人</p>
+						<p class="card_title name"></p>
+						<p class="card_value">全年共计帮助 <span class="num">0</span> 人</p>
 					</div>
 				</div>
 			</div>
@@ -250,7 +250,28 @@
 
 
 <script>
+    $.ajax({
+        type: "GET",
+        url: "/api/org/analysis",
+        dataType:"json",
+        contentType : 'application/json;charset=utf-8',
+        processData: false,
+        success: function (data) {
+			var _obj = data.data;
+			for(var key in _obj){
+			    var _dom = $("#"+key);
+			    if(_dom){
+                    for (var i = 0; i < 3; i++) {
+                        $("#"+key+" .name").eq(i).text(_obj[key][i].name);
+                        $("#"+key+" .num").eq(i).text(_obj[key][i].userNum);
+                    }
+				}
+			}
+        },
+        error:function () {
 
+        }
+    })
 
 </script>
 </body>
