--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -373,7 +373,7 @@
 			// layer.msg(JSON.stringify(data.field));
 			var _data = data.field;
             delete _data['file'];
-			_data.adminId = "1";
+			_data.adminId = localStorage.getItem("userId");
             _data.addressId = "140930";
             if(!_data.city){
                 _data.city = _data.province
