--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -278,8 +278,8 @@
 		form.on('submit(formDemo)', function(data){
             var _data = data.field;
             delete _data['file'];
-            _data.adminId = "1";
-            _data.organizationId = "2";
+            _data.adminId = localStorage.getItem("userId");
+            _data.organizationId = localStorage.getItem("jgid");
             $.ajax({
                 type: "POST",
                 url: "/api/apply/saveAndFlush",
