--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -70,7 +70,7 @@
 					<dl class="layui-nav-child">
 						<dd><a href="webApp/createServiceItemOrg.html">服务项目创建</a></dd>
 						<dd><a href="webApp/projectRunStatistics.html">项目运行统计</a></dd>
-						<dd><a href="webApp/projectInfo.html">项目数据分析</a></dd>
+						<dd><a href="webApp/projectAnalysis.html?organizationId=">项目数据分析</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
@@ -112,6 +112,17 @@
 
     $(".layui-side a").on("click",function(e){
         e.preventDefault();
+    })
+
+
+
+    $.ajax({
+        type: "get",
+        url: "/api/org/getByAdminId",
+        data: {adminId:localStorage.getItem("userId")},
+        success: function (data) {
+            localStorage.setItem("jgid",data.data.id);
+        }
     })
 
     //JavaScript代码区域
