--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -171,15 +171,15 @@
 					   class="layui-input">
 			</div>
 		</div>
-		<!--<div class="layui-form-item">-->
-			<!--<label class="layui-form-label">托养方式</label>-->
-			<!--<div class="layui-input-block" style="padding-right:15px;">-->
-				<!--<select name="nursingModeId">-->
-					<!--<option value="1">全托</option>-->
-					<!--<option value="2">日托</option>-->
-				<!--</select>-->
-			<!--</div>-->
-		<!--</div>-->
+		<div class="layui-form-item">
+			<label class="layui-form-label">托养方式</label>
+			<div class="layui-input-block" style="padding-right:15px;">
+				<select name="nursingModeId">
+					<option value="1">全托</option>
+					<option value="2">日托</option>
+				</select>
+			</div>
+		</div>
 		<!--<div class="layui-form-item">-->
 			<!--<label class="layui-form-label">托养月数</label>-->
 			<!--<div class="layui-input-block" style="padding-right:15px;">-->
@@ -187,13 +187,13 @@
 					   <!--class="layui-input">-->
 			<!--</div>-->
 		<!--</div>-->
-		<div class="layui-form-item">
-			<label class="layui-form-label">补贴金额</label>
-			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="subsidies" lay-verify="required" placeholder="" autocomplete="off"
-					   class="layui-input">
-			</div>
-		</div>
+		<!--<div class="layui-form-item">-->
+			<!--<label class="layui-form-label">补贴金额</label>-->
+			<!--<div class="layui-input-block" style="padding-right:15px;">-->
+				<!--<input type="number" name="subsidies" lay-verify="required" placeholder="" autocomplete="off"-->
+					   <!--class="layui-input">-->
+			<!--</div>-->
+		<!--</div>-->
 
 		<div class="layui-form-item">
 			<div class="layui-input-block" style="margin:30px 0;text-align: center">
