--- a/src/main/resources/static/webApp/manager/cockpit.html
+++ b/src/main/resources/static/webApp/manager/cockpit.html
@@ -32,6 +32,16 @@
 			background-color: #F0F8FF;
 			padding: 5px 10px;
 		}
+		.toggleData {
+			float: right;
+		}
+		.toggleData >span {
+			margin-left: 20px;
+			cursor: pointer;
+		}
+		.toggleData >.active {
+			color: #3399ff;
+		}
 		.subContent {
 			width: 100%;
 			height: 270px;
@@ -144,6 +154,10 @@
 		<div class="count">
 			<div class="subTitle">
 				<span> 数据统计</span>
+				<div class="toggleData" id="toggleData">
+					<span class="active">全区数据</span>
+					<span>当天数据</span>
+				</div>
 			</div>
 			<div class="subContent">
 				<div class="left">
@@ -241,15 +255,7 @@
 	$.ajax({
 		url: "/api/project/overview1",
 		type: "GET",
-		data: { district: ""},
-		success: function(res) {
-//			console.log("overview1",res);
-		}
-
-	});
-	$.ajax({
-		url: "/api/project/overview2",
-		type: "GET",
+		data: { district: "雨花台区"},
 		success: function(res) {
 			if(res ){
 				const {data ={}	} = res;
@@ -261,6 +267,71 @@
 		}
 
 	});
+	$.ajax({
+		url: "/api/project/overview2",
+		type: "GET",
+		success: function(res) {
+			if(res ){
+
+			}
+		}
+
+	});
+	$("#toggleData").on("click","span",function(e) {
+		const target = $(e.target);
+		if(target.hasClass("active"))
+			return false;
+		target.addClass("active").siblings().removeClass("active");
+		if(target.text() === "全区数据") {
+
+		} else {
+
+		}
+	});
+	analysisAll();
+	function analysisAll() {
+		$.ajax({
+			url: "/api/project/usersPreferenceAnalysis",
+			type: "GET",
+			data: { type: "智力残疾"},
+			success: function(res) {
+				if(res ){
+					console.log("/api/project/usersPreferenceAnalysis",res);
+					const { data = {}} = res;
+					if(JSON.stringify(data) !== "{}") {
+						const yData = Object.keys(data);
+						const xData = Object.values(data);
+						showAnalysisChart(xData,yData);
+					}
+
+				}
+			}
+
+		});
+	}
+
+	function analysisToday() {
+		$.ajax({
+			url: "/api/project/usersPreferenceAnalysisToday",
+			type: "GET",
+			data: { type: "智力残疾"},
+			success: function(res) {
+				if(res ){
+					console.log("/api/project/usersPreferenceAnalysisToday",res);
+					const { data = {}} = res;
+					if(JSON.stringify(data) !== "{}") {
+						const xData = Object.keys(data);
+						const yData = Object.values(data);
+						showAnalysisChart(xData,yData);
+					}
+				}
+			}
+
+		});
+	}
+
+
+
 	$.ajax({
 		url: "/api/project/overview3",
 		type: "GET",
@@ -294,51 +365,55 @@
 			return all;
 		},format);
 	}
-
-	var option = {
+	function showAnalysisChart(xData,yData) {
+		var option = {
 //		title: {
 //			text: '全区最喜爱残疾人项目分析'
 //		},
-		xAxis: {
-			type: 'value',
-			show: false,
-			splitLine: {show: false},
-			boundaryGap: [0, 0.01]
-		},
-		yAxis: {
-			type: 'category',
-			splitLine: {show: false},
-			axisLine: {
-				lineStyle:{
-					width: 0
-				}
+			xAxis: {
+				type: 'value',
+				show: false,
+				splitLine: {show: false},
+				boundaryGap: [0, 0.01]
 			},
-			axisTick: {
-				show: false
+			yAxis: {
+				type: 'category',
+				splitLine: {show: false},
+				axisLine: {
+					lineStyle:{
+						width: 0
+					}
+				},
+				axisTick: {
+					show: false
+				},
+//				data: ['跳绳','踢毽子','打球','跑步','其他'].reverse()
+				data: yData
 			},
-			data: ['跳绳','踢毽子','打球','跑步','其他'].reverse()
-		},
-		series: [{
-			name: 'bar',
-			type: 'bar',
-			barWidth: 10,
-			itemStyle: {
-				normal: {
-					barBorderRadius: 5,
-					color: new echarts.graphic.LinearGradient(
-							0, 0, 0, 1,
-							[
-								{offset: 0, color: '#14c8d4'},
-								{offset: 1, color: '#43eec6'}
-							]
-					)
-				}
-			},
-			data: [61, 34, 11, 6, 1].reverse()
-		}]
-	};
-	var myChart = echarts.init(document.getElementById('favorite'));
-	myChart.setOption(option);
+			series: [{
+				name: 'bar',
+				type: 'bar',
+				barWidth: 10,
+				itemStyle: {
+					normal: {
+						barBorderRadius: 5,
+						color: new echarts.graphic.LinearGradient(
+								0, 0, 0, 1,
+								[
+									{offset: 0, color: '#14c8d4'},
+									{offset: 1, color: '#43eec6'}
+								]
+						)
+					}
+				},
+//				 data: [61, 34, 11, 6, 1].reverse()
+				data: xData
+			}]
+		};
+		var myChart = echarts.init(document.getElementById('favorite'));
+		myChart.setOption(option);
+	}
+
 
 	function showLineData(legend,data,xData) {
 		const keys = Object.keys(data);
